RESOLVED FIXED38159
[chromium] Fix ChromiumDataObject::setURL to not populate its internal URL list with empty URLs
https://bugs.webkit.org/show_bug.cgi?id=38159
Summary [chromium] Fix ChromiumDataObject::setURL to not populate its internal URL li...
Daniel Cheng
Reported 2010-04-26 17:58:04 PDT
Created attachment 54357 [details] Fix for ChromiumDataObject::setURL This wouldn't be a problem except that it appends URLs to an internal list. The fix should be to not append empty URLs; otherwise, asserts in getData will be triggered.
Attachments
Fix for ChromiumDataObject::setURL (1023 bytes, patch)
2010-04-26 17:58 PDT, Daniel Cheng
no flags
Fix for ChromiumDataObject::setURL (1.02 KB, patch)
2010-04-26 18:04 PDT, Daniel Cheng
no flags
Fix for ChromiumDataObject::setURL (1014 bytes, patch)
2010-04-26 18:15 PDT, Daniel Cheng
no flags
Fix for ChromiumDataObject::setURL (1.05 KB, patch)
2010-04-26 18:17 PDT, Daniel Cheng
no flags
WebKit Review Bot
Comment 1 2010-04-26 18:02:52 PDT
Attachment 54357 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/chromium/ChromiumDataObject.h:80: Tab found; better to use spaces [whitespace/tab] [1] WebCore/platform/chromium/ChromiumDataObject.h:81: Tab found; better to use spaces [whitespace/tab] [1] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Daniel Cheng
Comment 2 2010-04-26 18:04:46 PDT
Created attachment 54359 [details] Fix for ChromiumDataObject::setURL Removed the tabs that VS inserted.
Daniel Cheng
Comment 3 2010-04-26 18:15:31 PDT
Created attachment 54363 [details] Fix for ChromiumDataObject::setURL Move the return, per the discussion.
Daniel Cheng
Comment 4 2010-04-26 18:17:38 PDT
Created attachment 54365 [details] Fix for ChromiumDataObject::setURL Fix ChangeLog
Jian Li
Comment 5 2010-04-26 18:20:25 PDT
Comment on attachment 54365 [details] Fix for ChromiumDataObject::setURL r=me
WebKit Commit Bot
Comment 6 2010-04-26 20:07:46 PDT
Comment on attachment 54365 [details] Fix for ChromiumDataObject::setURL Clearing flags on attachment: 54365 Committed r58280: <http://trac.webkit.org/changeset/58280>
WebKit Commit Bot
Comment 7 2010-04-26 20:07:51 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.