2010-04-26  Daniel Cheng  <dcheng@chromium.org>

Reviewed by Jian Li.

        [chromium] Fix ChromiumDataObject::setURL to not populate its internal URL list with empty URLs.
        https://bugs.webkit.org/show_bug.cgi?id=38159

        No new tests.

        * platform/chromium/ChromiumDataObject.h:
        (WebCore::ChromiumDataObject::setURL):

Canonical link: https://commits.webkit.org/49558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58280 268f45cc-cd09-0410-ab3c-d52691b4dbfc